--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
         </dependency>
+
+        <!-- pom.xml -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>24.10.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
